fixed wrapping on dashboard

--- a/src/app/components/sub/dashboard/dashboard.component.scss
+++ b/src/app/components/sub/dashboard/dashboard.component.scss
@@ -24,6 +24,7 @@ h2 {
     flex-direction: row;
     align-items: center;
     gap: 1rem;
+    flex-wrap: wrap;
 }
 
 .flex-column-nogap {
